gosite/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gosite-ing
spec:
  rules:
  - host: gosite.local.seanhome.xyz
    http:
      paths:
      - backend: 
          serviceName: gosite-svc
          servicePort: http
        path: /
